update all student endpoints
