# src/controllers/other.controller.js
@@ -1,0 +1,7 @@
+const getSlotRemain = async (req, res) => {
+  res.json(200).end()
+}
+
+export default {
+  getSlotRemain
+}
